try to fix spacing with footer

--- a/css/photogallery.css
+++ b/css/photogallery.css
@@ -140,7 +140,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    margin: 0 10% 20px 10%;
+    margin: 0 10% 2% 10%;
   }
   
   .left-link, .right-link {
@@ -155,6 +155,7 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 24px;
+    border: 5px solid red;
   }
 
   .left-link a {
